kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-web-service
  namespace: default
  annotations:
    # This annotation is important for Prometheus to discover the service
    "prometheus.io/scrape": "true"
    "prometheus.io/port": "8080"
spec:
  selector:
    app: scalable-web-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort # This will be targeted by the ALB Ingress
